--- a/ReMDy3/app/src/main/AndroidManifest.xml
+++ b/ReMDy3/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="example.ivanmagsino.remdy">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".addRecord"></activity>
+        <activity android:name=".additem" />
         <activity android:name=".inventory" />
         <activity
             android:name=".loading"
@@ -24,11 +25,12 @@
         <activity
             android:name=".login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".patientrecord" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
